--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://github.com/DiegoAlvaradoV/personalPortfolio.git",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -6,16 +7,25 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "firebase": "^8.3.0",
+    "gsap": "^3.6.0",
+    "mixitup": "^3.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mixitup": "^2.3.0",
     "react-scripts": "4.0.2",
+    "react-scrollreveal": "^1.2.0",
+    "sass": "^1.32.7",
+    "swiper": "^6.5.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
