--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/DiegoAlvaradoV/personalPortfolio.git",
+  "homepage":"https://diegoalvaradov.github.io/personalPortfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
