--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,21 +4,16 @@
   "icons": [
     {
       "src": "logo.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "54x40",
       "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "type": "image/png",
-      "sizes": "192x192"
     },
     {
       "src": "logoName.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "167x68"
     }
   ],
-  "start_url": "https://diegoalvaradov.github.io/personalPortfolio/",
+  "start_url": "https://diegoalvaradov.github.io/Portfolio/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
