--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": "https://diegoalvaradov.github.io/Portfolio/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "theme_color": "#000000"
 }
